--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^0.16.2",
-        "htmlparser2": "^3.9.2"
+        "htmlparser2": "^3.9.2",
+        "js-cookie": "^2.1.4"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
