--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
         "babili": "^0.1.4",
+        "dotenv": "^4.0.0",
         "uglifyjs-webpack-plugin": "^0.4.6",
         "webpack": "^3.5.2"
     }
