New parsing options and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Required
 DEFAULT_LANGUAGE='en-US'
 LANGUAGES=['en-US','es','de','fr']
 TRANSLATION_URL='http://translate.example.com/translations/'
+
+# Optional
+HEADERS={}
+ADD_LOCALIZED=true
